feat: Adicionado filtros padrão na OS
